--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,27 @@
             <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.java-websocket</groupId>
-            <artifactId>Java-WebSocket</artifactId>
-            <version>1.5.6</version>
-        </dependency>
+<!--        Use this for running latency to add to classpath-->
+<!--        <dependency>-->
+<!--            <groupId>org.java-websocket</groupId>-->
+<!--            <artifactId>Java-WebSocket</artifactId>-->
+<!--            <version>1.5.6</version>-->
+<!--        </dependency>-->
     </dependencies>
+
+    <scm>
+        <connection>scm:git:git@github.com:gnome-trading-group/fast-websocket-client4j.git</connection>
+        <developerConnection>scm:git:git@github.com:gnome-trading-group/fast-websocket-client4j.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub GTG Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/gnome-trading-group/fast-websocket-client4j</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -40,6 +54,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.1</version>
             </plugin>
         </plugins>
     </build>
